# tokscale

./: .gitignore  .npmrc  AGENTS.md  Cargo.toml  README.ja.md  README.ko.md  README.md  README.zh-cn.md  ai-todolist-source-merge.md  ai-todolist.md  codecov.yml  package.json
.github/workflows/: build-native.yml  coverage.yml  publish-cli.yml  test.yml  test_coverage.yml
.sisyphus/plans/: cli-readme-alignment.md
benchmarks/: package.json
core/: Cargo.toml  package.json
coverage/: cobertura.xml  lcov.info  tarpaulin-report.html
crates/tokscale-cli/: Cargo.toml  MOUSE_SELECTION.md
crates/tokscale-cli/src/: antigravity.rs  auth.rs  cursor.rs  main.rs
crates/tokscale-cli/src/commands/: autosubmit.rs  mod.rs  report.rs  wrapped.rs
crates/tokscale-cli/src/commands/usage/: mod.rs
crates/tokscale-cli/src/tui/: app.rs  cache.rs  client_ui.rs  config.rs  event.rs  mod.rs  settings.rs  themes.rs
crates/tokscale-cli/src/tui/data/: mod.rs
crates/tokscale-cli/src/tui/ui/: agents.rs  bar_chart.rs  daily.rs  footer.rs  header.rs  hourly.rs  minutely.rs  mod.rs  models.rs  monthly.rs  overview.rs  stats.rs  usage.rs  widgets.rs
crates/tokscale-cli/src/tui/ui/dialog/: mod.rs  select.rs  source_picker.rs
crates/tokscale-cli/tests/: cli_tests.rs
crates/tokscale-core/: Cargo.toml
crates/tokscale-core/src/: aggregator.rs  clients.rs  fs_atomic.rs  lib.rs  message_cache.rs  scanner.rs  tui_signal.rs
crates/tokscale-core/src/pricing/: aliases.rs  cache.rs  litellm.rs  lookup.rs  mod.rs  openrouter.rs
crates/tokscale-core/src/sessions/: amp.rs  claudecode.rs  codebuddy.rs  codex.rs  copilot.rs  copilot_desktop.rs  copilot_vscode.rs  cursor.rs  droid.rs  gemini.rs  kimi.rs  kiro.rs  micode.rs  mod.rs  openclaw.rs  opencode.rs  pi.rs  qwen.rs  tencent_buddy.rs  workbuddy.rs
crates/tokscale-napi/: Cargo.toml  package.json
crates/tokscale-napi/src/: aggregator.rs
docs/: GITHUB_NPM_PUBLISHING.md  SOCIAL_PLATFORM.md
frontend/: .env.example  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(main)/: page.tsx
frontend/src/app/device/: page.tsx
frontend/src/components/: DataInput.tsx  TokenGraph3D.tsx
scripts/: generate-release-notes.ts
src/: cli.ts  gemini.ts
(+9 files in other folders)
