[package]
name = "tokscale-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI and TUI for tokscale - AI token usage analytics"

[[bin]]
name = "tokscale"
path = "src/main.rs"

[dependencies]
tokscale-core = { workspace = true }

clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
comfy-table = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
rayon = { workspace = true }
arboard = { workspace = true }
reqwest = { workspace = true }
hostname = "0.4"
