[package]
name = "tokscale-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI and TUI for tokscale - AI token usage analytics"

[[bin]]
name = "tokscale"
path = "src/main.rs"

[dependencies]
tokscale-core = { workspace = true }

clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
comfy-table = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
rayon = { workspace = true }
arboard = { workspace = true }
reqwest = { workspace = true }
hostname = "0.4"
uuid = { version = "1.0", features = ["v4"] }
rpassword = "7.0"
sha2 = "0.10"
csv = "1.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
